# the-c-programming-language-exercises

./: .exrc  .gitignore  README.md
Ch1/: advanced_count.c  c_comment_test.c  celcius_to_fahr.c  count_input.c  count_lines.c  detab.c  eof.c  ex-10.c  ex-12.c  ex-13.c  ex-14.c  ex-15.c  ex-16.c  ex-17.c  ex-18.c  ex-19.c  ex-23.c  fold.c  hello.c  longest_line.c  output.c  power.c  simple_io.c  stack.c  temperature.c  wc.c  whitespace_trunc.c
Ch2/: ex1.c  ex3.c  ex4.c  ex5.c  ex6_7_8.c  ex9.c  test_arithmetic.c
Ch3/: atoi.c  binary_search.c  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  shell_sort.c  strutils.c  switch.c
Ch4/: ex1.c  ex12.c  ex13.c  ex14.c  ex2.c  qsort.c  strindex.c
Ch4/calculator/: .gitignore  CMakeLists.txt  main.c
Ch4/calculator/include/: buffer.h  calc.h  stack.h  token.h
Ch4/calculator/src/: buffer.c  main.c  stack.c  token.c
Ch5/: basic_sort.c  dcl.c  detab  detab.c  entab  entab.c  ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  ex4  ex4.c  ex5  ex5.c  ex8  ex8.c  expr  expr.c  find  find.c  quicksort  quicksort.c  tail  tail.c  undcl.c
Ch6/: count_keywords.c
include/: stack.h  strutils.h
utils/: allocator.c  strutils.c
